fixed issue in firefox: vertical margin on input breaks alignment

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -29,11 +29,6 @@ $selectedFlagWidth: $flagWidth + (2 * $flagPadding) + $arrowWidth + $arrowPaddin
   .hide {
     display: none;
   }
-  // this wrapper is required to ignore any vertical margin on the input
-  // (otherwise the alignment would be wrong for the selected flag/dropdown)
-  .intl-tel-input-position {
-    position: relative;
-  }
 
   .flag-dropdown {
     // positioned over the top of the input
@@ -74,11 +69,10 @@ $selectedFlagWidth: $flagWidth + (2 * $flagPadding) + $arrowWidth + $arrowPaddin
     position: relative;
     z-index: 0;
 
-    // the input is the only child of the wrapper div which is actually in the flow
-    // (position:relative), so it determines the height of everything. by setting
-    // display:block, we tell the parent to ignore any vertical margin, which
-    // otherwise would change the total height and hence mess up the alignment
-    display: block;
+    // any vertical margin the user has on their inputs will no longer work as we're
+    // wrapping everything in a div. it will also break alignment, so we force remove it
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
   }
 
 
